sq fix